--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,7 @@ body {
     font-weight: bold;
     margin-bottom: 20px;
     padding-bottom: 20px;
+    margin-top: 20px;
     position: relative;
     color: #2c4964;
   }
