--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -766,4 +766,57 @@ body {
     color: #fff;
     text-decoration: none;
   }
+   /* **************pop up form***************** */
+#applyBtn{
+  display: block;
+  padding: 10px 20px;
+  margin: 10px auto;
+  background-color: crimson;
+  color: white;
+  border: 0;
+}
+.popup-wrapper{
+  display: none;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  padding: 100px 0 ;
+  background-color: rgba(0, 0, 0, .7);
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+}
+.pop-up{
+  width: fit-content;
+  margin: 0 auto;
+  background-color: rgb(157, 188, 230);
+  height: fit-content;
+  padding: 20px 20px;
+  position: relative;
+}
+.popup-close{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+.popup-content{
+  font-family: Arial, Helvetica, sans-serif;    
+}
+.popup-content h2{
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+}
+.popup-content a{
+  display: flex;
+  justify-content: center;
+  color: rgb(248, 248, 248);
+  padding: 7px 15px;
+  margin: 10px auto;
+  background-color: crimson;
+  width: fit-content;
+  text-decoration: none;
+}
   
